# web-fetcher

./: .gitignore  2025-09-17-162537 - 赵磊_常委_首都之窗_北京市人民政府门户网站.md  ADR-002-CRAWL-OPTIMIZATION.md  ADR-003-VALIDATION-ARCHITECTURE.md  ARCHITECTURE_ASSESSMENT_REPORT.md  ARCHITECTURE_VALIDATION_REPORT.md  ARCH_WEEK1_FINAL_VALIDATION.md  BACKUP_RECORD_2025-09-26.md  CHANGELOG.md  CURL_PLUGIN_IMPLEMENTATION_SUMMARY.md  CURL_PLUGIN_VALIDATION_REPORT.md  Dual_Crawler_Upgrade_Plan.md  ENCODING_FIX_PHASE1_SPEC.md  IMPLEMENTATION_CHECKLIST.md  MASTER_VALIDATION_PLAN.md  PARAMETER_SYSTEM_DEPENDENCY_GRAPH.md  PERFORMANCE_BENCHMARK_PROTOCOL.md  PERFORMANCE_VALIDATION_TEST.py  PHASE1_EXECUTION_CHECKLIST.md  PHASE1_MIGRATION_SPEC.md  PHASE1_QUICK_REFERENCE.md  PHASE1_TASK1_ANALYSIS_REPORT.md  PHASE1_TASK1_VALIDATION.md  PHASE1_TASK2_SPEC.md  PHASE_2.2_STEP_2.2.1_REPORT.md  PHASE_2.2_STEP_2.2.3_COMPLETED.md  PLAYWRIGHT_ARCHITECTURE_REVIEW.md  PROGRESSIVE_IMPROVEMENT_PLAN.md  QUICK_PLUGIN_MIGRATION.md  README.md  TECHNICAL_ARCHITECTURE_SPEC.md  TEST_VALIDATION_SPEC.md  VALIDATION_EXECUTION_FRAMEWORK.md  WEEK3_ACCEPTANCE_CRITERIA.md  WEEK3_SAFARI_FINAL_ARCHITECTURE.md  WEEK3_SAFARI_INTEGRATION_ARCHITECTURE.md  WF_COMMAND_FIX_RECORD.md  architecture_validation_test.py  code_quality_review.py  crawl_log.txt  (+34 more)
TASKS/: 0_Chrome启动标志修复.md  10_Fix_Xiaohongshu_Routing_Issue.md  1_优化失败报告生成格式.md  1_修复Selenium模式可用性检测.md  1_完成Selenium错误提示优化.md  1_新增Chrome调试守护脚本.md  2_优化失败报告生成格式.md  2_修复Chrome错误消息.md  2_改进Selenium失败报告输出.md  3_实现集中化错误报告模块.md  3_建立统一错误处理框架.md  3_解析器架构优化.md  7_Unified_Error_Classification_System.md  PHASE3_2_REMOVAL_ANALYSIS.md  PHASE3_ARCHITECTURE_ANALYSIS.md  PHASE3_IMPLEMENTATION_GUIDE.md  PROJECT-MANAGEMENT-REPORT-2025-10-10.md  PROJECT-MANAGEMENT-UPDATE-2025-10-10-v2.md  PROJECT_RESTRUCTURING_PLAN.md  PROJECT_STATE_REPORT_2025_10_09.md  README.md  REGRESSION-TEST-REPORT-2025-10-10.md  SELENIUM_PHASE2_TEST_REPORT.md  TASK10_COMPLETION_SUMMARY.md  TASK1_IMPLEMENTATION_SUMMARY.md  TASK7_IMPLEMENTATION_SUMMARY.md  Task-002-Phase1-Review-Report.md  delete.md  delete2.md  delete_combination.md  task-002-chrome-selenium-timeout-investigation.md  task-007-dual-method-regression-testing.md  task-008-enhanced-multi-page-site-crawling.md  task-009-COMPLETION-SUMMARY.md  task-009-news-cn-empty-content-extraction.md  task-009-phase3-testing-report.md  task-009-wf-command-alias-conflict.md  task-1-parser-template-creator-tools.md  task-2-core-module-pruning.md  task-2-regression-test-harness.md  (+4 more)
beijing_gov_full/: 2025-09-17-164933 - # Table of Contents.md
beijing_gov_test/: 2025-09-17-155151 - # Table of Contents.md
beijing_leaders_focused/: 2025-09-17-184744 - # Table of Contents.md
beijing_zhaolei_fixed/: 2025-09-17-163137 - 赵磊_常委_首都之窗_北京市人民政府门户网站.md
beijing_zhaolei_render/: 2025-09-17-162704 - 赵磊_常委_首都之窗_北京市人民政府门户网站.md
benchmarks/: __init__.py  parser_performance.py
config/: chrome-debug-launcher.sh  chrome-debug.sh  ensure-chrome-debug.sh  routing.yaml  selenium_defaults.yaml  start_chrome_debug.sh  配置chrome.md
core/: parsers.py
diagnostics/: README.md  run_diagnosis.py  spa_diagnosis.py
docs/: CDP_INTEGRATION_SUMMARY.md  CDP_USAGE.md  Core-Cleanup-Plan.md  PRIORITY_SYSTEM_VALIDATION.md  README.md  SELENIUM_DEPENDENCIES_INSTALLATION_GUIDE.md  phase0_completion_validation.md  phase1_completion_report.md  phase1_task1_specification.md
examples/: cdp_demo.py
extractors/: __init__.py  base_extractor.py  ccdi_extractor.py  generic_extractor.py  qcc_extractor.py
parser_engine/: template_parser.py
parsers/: base_parser.py  template_parser.py
plugins/: __init__.py  base.py  config.py  curl.py  domain_config.py  http_fetcher.py  playwright_fetcher.py  plugin_config.py  registry.py  safari_plugin.py
safari_cookie_test/: USAGE_GUIDE.md
scripts/: run_regression_suite.py  start_chrome.sh
tasks/: CONFIG_DRIVEN_IMPLEMENTATION.md  PLUGIN_CONFIG_INTEGRATION_GUIDE.md  增加爬取方式的方案-优化版.md  完美双分支融合方案-备份.md  完美双分支融合方案.md  插件结构优化-简化版.md  爬取方案文档审核报告.md  生产环境参数问题分析.md  脚本采集方案.md  解析架构优化.md
test_ccdi/: CCDI_SAFARI_FINAL_SOLUTION.md  COMPREHENSIVE_INTEGRATION_REPORT.md  PLUGIN_INTERFACE_SPECIFICATION.md  QUALITY_ASSURANCE_TESTS.py  SAFARI_FALLBACK_INTEGRATION_ANALYSIS.md  SAFARI_FALLBACK_USAGE_GUIDE.md  SAFARI_INTEGRATION_PLAN.md  enhanced_wf  safari_config_template.py  test_qcc_extraction.py  test_safari_integration.py
test_jsonld/: 2025-09-17-172106 - 赵磊_常委_首都之窗_北京市人民政府门户网站.md  2025-09-17-172133 - Test Article with JSON-LD.md  2025-09-17-172156 - Test with Date.md  (+3 more)
(+212 files in other folders)
